--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,10 @@ body {
 
 :root {
   --yellow: #FFCE54;
+  --yellowOpacity: #ffcf54e0;
   --dark: rgba(0,0,0,0.8);
   --grey: #535353;
+  --greyOpacity: rgba(255,255,255,0.2);
   --white: white;
 }
 
@@ -280,13 +282,9 @@ nav ul li a {
 
 .galery {
   background: var(--grey);
-  padding: 30px 50px;
+  padding: 30px 10px;
   padding-bottom: 60px;
   margin-top: 50px;
-}
-
-.galery img {
-  width: 100%;
 }
 
 .galery h3 {
@@ -299,16 +297,49 @@ nav ul li a {
 }
 
 .galery .carousel {
-  margin-top: 50px;
+  display: flex;
+  padding-top: 50px;
+  overflow-x: scroll;
+  padding-bottom: 30px;
 }
 
-.galery .slick-dots li button:before {
-  color: var(--white);
+.galery .carousel img:nth-child(1) {
+  margin-left: 30px;
 }
 
-.galery .carousel .slick-dots li.slick-active button:before {
-  color: var(--yellow);
+.galery .carousel img {
+  width: 400px;
+  border: 8px solid var(--white);
+  margin-right: 30px;
+  height: 100%;
+  max-height: 250px;
+  transition: all .3s ease;
 }
+
+.galery .carousel img:hover {
+  transform: scale(1.1);
+  transition: all .3s ease;
+}
+
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 7px;
+  height: 5px;
+  background: var(--greyOpacity);
+  border-radius: 15px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--yellowOpacity);
+  border-radius: 15px;
+  transition: all .2s ease;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--yellow);
+  transition: all .2s ease;
+}
+/* Scrollbar */
 
 .contact {
   margin: 30px;
@@ -484,6 +515,17 @@ nav ul li a {
   .about .row section:nth-child(2) {
     margin-top: 50px;
   }
+
+  /* Scrollbar */
+  ::-webkit-scrollbar {
+    height: 7px;
+  }
+  /* Scrollbar */
+  
+  .galery .carousel img {
+    width: 350px;
+    max-height: 220px;
+  }
 }
 
 @media(max-width: 850px) {
@@ -538,5 +580,14 @@ nav ul li a {
   .about .row section p {
     margin-top: 20px;
     font-size: 15px;
+  }
+
+  .functions h3, .timeline h3, .team h3, .galery h3, .contact h3 {
+    font-size: 27px;
+  }
+  
+  .galery .carousel img {
+    width: 300px;
+    max-height: 180px;
   }
 }
