--- a/css/style.css
+++ b/css/style.css
@@ -502,6 +502,12 @@ footer nav ul li:hover a {
   transition: all .2s ease;
 }
 
+@media(min-width: 1800px) {
+  .introduction {
+    padding: 50px 0;
+  }
+}
+
 
 @media(max-width: 1300px) {
   .team .row {
